--- a/INSTALL
+++ b/INSTALL
@@ -39,11 +39,12 @@ Quick install
    If you have kernel source code in another directory than /usr/src/linux,
    use --with-kernel=<kernel_directory>.
    Example: ./configure --with-isapnp=yes --with-debug=full
-4) Run 'make install'.
-5) Run the './snddevices' script to create new sound devices in /dev directory.
+4) Run 'make'.
+5) Run 'make install'.
+6) Run the './snddevices' script to create new sound devices in /dev directory.
    Skip this step, if you have a kernel with the DEVFS support.
-6) Edit your /etc/modules.conf (see the kmod support section below).
-7) Run 'modprobe snd-xxxx' where xxxx is the name of your card.
+7) Edit your /etc/modules.conf (see the kmod support section below).
+8) Run 'modprobe snd-xxxx' where xxxx is the name of your card.
    Note: If you have a ISA PnP soundcard you need to first run the isapnp
          program from isapnptools package to initialize your
          soundcard. You can also use the native ISA PnP support by
