- added snd-usb-us428 driver by Karsten Wiese. - export some functsion in usbmidi.c for usb-us428 driver.

--- a/INSTALL
+++ b/INSTALL
@@ -174,3 +174,14 @@ Additional Modules
 
     Module supports up to 8 cards.
 
+  Module snd-usb-us428
+  --------------------
+
+    Module for Tascam USB US-428 device.
+
+    This module supports up to 8 cards, autoprobe and hotplugging.
+
+    Note: you need to load the firmware via usx2yloader utility included
+          in alsa-tools package.
+
+
