--- a/INSTALL
+++ b/INSTALL
@@ -4,15 +4,18 @@
 			    Installation guide
 
 
-The ALSA driver replaces the OSS/Free driver. The OSS/Free driver is
-present in current Linux kernels (2.2).  Since version 0.4.0, ALSA has
-supported only 2.2+ kernels. The 2.0 kernels are no longer supported. You
-must compile the kernel with sound support (you do not need to select
-any of the other sound modules apart from sound support).
+The ALSA driver replaces the OSS/Free driver.  Since version 0.4.0,
+ALSA has supported only 2.2 or later kernels. The 2.0 kernels are no
+longer supported.
+
+You must compile the kernel with sound support (CONFIG_SOUND on
+2.2/2.4 kernels) either as module or built-in.  You do not need to
+select any of the other sound modules apart from sound support.
 
 Before installing this driver, it will be helpful to read carefully
 the documentation for insmod, modprobe, kmod and for the isapnp
 module if you have an ISA PnP soundcard.
+
 
 Module option name change after 0.9.0rc3
 ========================================
@@ -20,6 +23,7 @@ Module option name change after 0.9.0rc3
 Note that module option names were changed in 0.9.0rc4. The 'snd_' prefix
 was removed. You may use script in utils directory (module-options) to
 convert your older /etc/modules.conf to newer one.
+
 
 Quick install
 =============
@@ -45,11 +49,10 @@ Quick install
    Skip this step, if you have a kernel with the DEVFS support.
 7) Edit your /etc/modules.conf (see the kmod support section below).
 8) Run 'modprobe snd-xxxx' where xxxx is the name of your card.
-   Note: If you have a ISA PnP soundcard you need to first run the isapnp
-         program from isapnptools package to initialize your
-         soundcard. You can also use the native ISA PnP support by
-         using the --with-isapnp=yes configuration switch, in which
-	 case you do not need the isapnptools package.
+   Note: All ALSA ISA drivers support ISA PnP natively, so you don't need
+         isapnptools any more.  Don't use both together.  It will
+         conflict.  For disabling the ALSA ISA PnP support, specify
+         --with-isapnp=no configure switch.
 
 You can also look at the utils/alsasound file. This script is designed for
 the RedHat distribution, but it can be used with other distributions which
@@ -64,14 +67,24 @@ Note: This document notices the /etc/modules.conf file. Many current
       valid.
 
 
+Basic Configurations
+====================
+
+See alsa-kernel/Documentation/ALSA-Configuration.txt
+(or Documentation/sounds/alsa/ALSA-Configuration.txt in linux-2.6
+ kernel tree).
+
+
 Driver cannot be activated?
 ===========================
 
 1) You can check your soundcard setup again and read this install file
    (module parameters) carefully.
 2) If you have got ISA PnP soundcard:
-   - native ISA PnP support: is your setup in /proc/isapnp correct?
-   - isapnptools: is configuration on isapnp.conf same as for the driver?
+   native ISA PnP support: is your setup in /proc/isapnp correct?
+3) If you have *non*-ISA PnP card:
+   set isapnp=0 module option?  Otherwise the driver probes only the
+   ISA PnP cards.
 3) The driver is not still working: remake driver with:
      ./configure --with-debug=detect; make clean; make
    Reinsert new driver modules to kernel and look to /var/log/messages if
@@ -110,17 +123,44 @@ Example:
   './configure --with-cross=arm-linux- --with-kernel=/home/ipaq/kernel/linux'.
 
 
-Bug reporting system
-====================
+Autoloading on Older Kernels
+============================
 
-http://www.alsa-project.org/cgi-bin/bugs
+On 2.2 or 2.4 kernels, you have to set the additional aliases for
+auto-loading via kmod in /etc/modules.conf:
 
+----- /etc/modules.conf
+# ALSA portion
+alias char-major-116 snd
+# OSS/Free portion
+alias char-major-14 soundcore
+alias sound-service-0-0 snd-mixer-oss
+alias sound-service-0-1 snd-seq-oss
+alias sound-service-0-3 snd-pcm-oss
+alias sound-service-0-8 snd-seq-oss
+alias sound-service-0-12 snd-pcm-oss
+----- /etc/modules.conf
 
-Module parameters
-=================
+The aliases sound-service-x-y define the add-on modules for ALSA
+OSS emulation.  For the second or later card, define more aliases
+for mixer and pcm in addition, such as:
 
-For the drivers already integrated into 2.5 kernel tree, please see
-alsa-kernel/Documentation/ALSA-Configuration.txt
+----- /etc/modules.conf
+# OSS/Free portion - card #2
+alias sound-service-1-0 snd-mixer-oss
+alias sound-service-1-3 snd-pcm-oss
+alias sound-service-1-12 snd-pcm-oss
+----- /etc/modules.conf
+
+You don't need to define service 1 and 8 for the second or later
+cards.
+
+If you want to autoclean your modules, you should put below line to your
+/etc/crontab:
+
+*/10 * * * *   root  /sbin/modprobe -rs snd-card-0 snd-card-1; /sbin/rmmod -as
+
+You may also want to extend the soundcard list to follow your requirements.
 
 
 Additional Modules
