- renamed us428 to usx2y driver.   the subdirectory is moved, too.   supports us122 device now.

--- a/INSTALL
+++ b/INSTALL
@@ -214,10 +214,10 @@ Additional Modules
 
     Module supports up to 8 cards.
 
-  Module snd-usb-us428
+  Module snd-usb-usx2y
   --------------------
 
-    Module for Tascam USB US-428 device.
+    Module for Tascam USB US-122 and US-428 devices.
 
     This module supports up to 8 cards, autoprobe and hotplugging.
 
