- firmware is now in alsa-firmware package together with alsa-tools.

--- a/INSTALL
+++ b/INSTALL
@@ -231,7 +231,7 @@ Additional Modules
     This module supports up to 8 cards, autoprobe and hotplugging.
 
     Note: you need to load the firmware via usx2yloader utility included
-          in alsa-tools package.
+          in alsa-tools and alsa-firmware packages.
 
 
   Module snd-au8810, snd-au8820, snd-au8830
