--- a/INSTALL
+++ b/INSTALL
@@ -175,6 +175,15 @@ Additional Modules
 
     This module supports up to 8 cards and autoprobe.
 
+  Module snd-intel8x0m
+  --------------------
+
+    Module for Intel ICH (i8x0) chipset MC97 modems.
+
+    ac97_clock	  - AC'97 codec clock base (0 = auto-detect)
+
+    This module supports up to 8 cards and autoprobe.
+
   Module snd-mixart
   -----------------
 
