Tentative MPU-401 driver with PnP for ACPI-enabled systems

--- a/INSTALL
+++ b/INSTALL
@@ -273,6 +273,14 @@ Additional Modules
     This module supports up to 8 cards and autoprobe.
 
 
+  Module snd-mpu401-acpi
+  ----------------------
+
+    Module for MPU-401 devices on ACPI-enabled motherboards.
+
+    This module supports up to 8 devices and autoprobe.
+
+
 Trouble Shooting
 ================
 
