--- a/INSTALL
+++ b/INSTALL
@@ -243,6 +243,16 @@ Additional Modules
 
     Module supports up to 8 cards.
 
+  Module snd-via82xx-modem
+  ------------------------
+
+    Module for VIA82xx AC97 modem
+
+    ac97_clock	- AC'97 codec clock base (default 48000Hz)
+    ac97_quirk  - AC'97 workaround for strange hardware
+
+    Module supports up to 8 cards.
+
 
 Trouble Shooting
 ================
