--- a/INSTALL
+++ b/INSTALL
@@ -252,6 +252,17 @@ Additional Modules
 
     Module supports up to 8 cards.
 
+  Module snd-asihpi
+  -----------------
+
+    Module for AudioScience ASI soundcards
+
+    Module supports up to 8 cards.
+
+    Note: You need to specify the HPK source code tree via --with-asihpk
+          configure option to build this driver.  HPK module must be
+          installed beforehand for compilation of ALSA snd-asihpi module.
+
 
 Trouble Shooting
 ================
