Rename of audigyls to ca0106 and support of SB Live 24bit
snd-audigyls is renamed to more generic name, snd-ca0106.
Now it's in the independent subdirectory pci/ca0106.
The new driver supports SB Live 24bit, too.

Signed-off-by: James Courtier-Dutton <James@superbug.co.uk>

--- a/INSTALL
+++ b/INSTALL
@@ -233,10 +233,10 @@ Additional Modules
 
     Module supports up to 8 cards.
 
-  Module snd-audigyls
-  -------------------
+  Module snd-ca0106
+  -----------------
 
-    Module for Creative Audigy LS
+    Module for Creative Audigy LS and SB Live 24bit
 
     Module supports up to 8 cards.
 
