Add PC-speaker PCM driver support
Added PC-Speaker PCM driver support by Stas Sergeev.

--- a/INSTALL
+++ b/INSTALL
@@ -387,6 +387,14 @@ Information about Additional Modules
 
     For ARM architecture only.
 
+  Module snd-pcsp
+  ---------------
+
+    Module for PC-Speaker driver.
+
+    For X86 only.  The kernel patch is required in advance, found in
+    utils/patches/pcsp-kernel-2.6.10-03.diff
+
 
 Trouble Shooting
 ================
