--- a/INSTALL
+++ b/INSTALL
@@ -80,7 +80,9 @@ Quick install
    using a DEVFS or udev.
 
 7) Edit your kernel module config (either /etc/modprobe.conf or
-   /etc/modules.conf, depending on the kernel version).
+   /etc/modules.conf, depending on the kernel version). If you are not
+   sure, what to do, you may try the alsaconf script available in
+   the alsa-utils package.
 
 8) Run 'modprobe snd-xxxx' where xxxx is the name of your card.
    Note: All ALSA ISA drivers support ISA PnP natively, so you don't need
