--- a/INSTALL
+++ b/INSTALL
@@ -388,6 +388,20 @@ Information about Additional Modules
     wss		- enable WSS mode
     ide		- enable onboard ide support
 
+  Module snd-riptide
+  ------------------
+
+    Module for Conexant Riptide chip
+
+      joystick_port	- Joystick port # (default: 0x200)
+      mpu_port		- MPU401 port # (default: 0x330)
+      opl3_port		- OPL3 port # (default: 0x388)
+
+    Module supports up to 8 cards.
+    The driver requires the firmware loader support on kernel.
+    You need to install the firmware file "riptide.hex" to the standard
+    firmware path (e.g. /lib/firmware).
+
 
 Trouble Shooting
 ================
